2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/*: first draft version that compiles and runs with prefork

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
	* src/rivet.h: Add error message buffer size definition (was still hardcoded
	here and there)

2019-01-14 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetCore.c: add experimental ::rivet::thread_id
	command

2019-01-08 Massimo Manghi <mxmanghi@apache.org>
	* : new branch quattuor created with an initial commit that tries
	to remodel the initialization, optimize intepreter creation, remove
	unneeded structures and other data keeping in mind the goal of
	abating complexity 

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
	* doc/: merging from 3.1 fixes to various broken docbook elements
	 and new entities to external resources' URLs
	* src/mod_rivet_ng/rivetCore.c,rivet_worker_mpm.c: hardcoded buffer size into
	their correct macro definitions

2019-01-05 Massimo Manghi <mxmanghi@apache.org>
	* doc/: merging from 3.1 fixes to various broken docbook elements
	and new entities to external resources' URLs

2018-12-24 Georgios Petasis <petasisg@apache.org>
	* README.md: Added badges also for the GitHub fork at:
	https://github.com/petasis/tcl-rivet.

	* .appveyor.yml: Enhancements to not rely on hard-coded paths.

2018-12-23 Massimo Manghi <mxmanghi@apache.org>
    * cmake/CMakeLists.txt: starting with rivet 3 we need Tcl > 8.6.1

2018-12-20 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Set policy behaviour of CMP0074, only if policy is
    defined (i.e. cmake version >= 3.12).

2018-12-19 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Added support for regenerating pkgIndex.tcl in the
    installation directory of rivetlib, after files have been installed.
    This executes "tclsh".

2018-12-18 Massimo Manghi <mxmanghi@apache.org>
	* rivet/pkgIndex.tcl: update rivetlib version. The CMake build script doesn't run