@@ -1,3 +1,7 @@
+2019-03-05 Massimo Manghi <mxmanghi@apache.org>
+    * src/rivet.h: Better semantics for macros RIVET_FOREACH_INTERPRETER and
+    RIVET_FOREACH_VIRTUAL_HOST
+
 2019-01-21 Massimo Manghi <mxmanghi@apache.org>
 	* src/mod_rivet_ng/*: first draft version that compiles and runs with prefork
 
